k8s-deploy.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: micheal-web-deployment
  labels:
    app: micheal-web
spec:
  replicas: 2
  selector:
    matchLabels:
      app: micheal-web
  template:
    metadata:
      labels:
        app: micheal-web
    spec:
      containers:
        - name: micheal-web
          image: amazingatul/micheal-web:v1
          ports:
            - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: micheal-web-service
spec:
  selector:
    app: micheal-web
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  type: ClusterIP
